hw_05/prometheus/grafana/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: grafana-ingress
    namespace: monitoring
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.homework
      http:
        paths:
          - path: /(|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: grafana-svc
                port:
                  number: 80
